importer working and  db

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,7 +51,7 @@ services:
       - USE_DEV_MODE
       - PORT=80
       - SWAGGER_PORT=8080
-      - DATABASE_URL=postgresql://sd:sd@bl-db:5432/sd?schema=public
+      - DATABASE_URL=np
 
   importer:
     container_name: importer
