--- a/src/bl-api/package.json
+++ b/src/bl-api/package.json
@@ -17,14 +17,16 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "clean": "node prisma/clear.ts"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "fs.realpath": "^1.0.0" 
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -48,6 +50,7 @@
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
+    "fs.realpath": "^1.0.0",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.3"
   },
