--- a/src/bl-api/package.json
+++ b/src/bl-api/package.json
@@ -22,11 +22,18 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^10.2.0",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
+    "fs.realpath": "^1.0.0",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1",
-    "fs.realpath": "^1.0.0" 
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -42,6 +49,7 @@
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "fs.realpath": "^1.0.0",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
     "prisma": "^5.6.0",
@@ -50,7 +58,6 @@
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
-    "fs.realpath": "^1.0.0",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.3"
   },
