--- a/src/bl-api/package.json
+++ b/src/bl-api/package.json
@@ -29,6 +29,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "dotenv": "^16.4.5",
     "fs.realpath": "^1.0.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
@@ -52,7 +53,7 @@
     "fs.realpath": "^1.0.0",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
-    "prisma": "^5.6.0",
+    "prisma": "^5.16.1",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
