--- a/src/importer/package.json
+++ b/src/importer/package.json
@@ -10,9 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "knex": "^3.1.0",
-    "pg": "^8.5.1",
+    "dotenv": "^16.4.5",
     "fs-extra": "^10.0.0",
-    "fs.realpath": "^1.0.0"
+    "fs.realpath": "^1.0.0",
+    "knex": "^3.1.0",
+    "pg": "^8.5.1"
   }
 }
