--- a/src/bl-api/package.json
+++ b/src/bl-api/package.json
@@ -29,6 +29,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "fs.realpath": "^1.0.0",
     "passport": "^0.7.0",
