--- a/src/importer/package.json
+++ b/src/importer/package.json
@@ -14,6 +14,7 @@
     "fs-extra": "^10.0.0",
     "fs.realpath": "^1.0.0",
     "knex": "^3.1.0",
+    "@prisma/client": "^4.0.0",
     "pg": "^8.5.1"
   }
 }
